WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
262168
Highlights are not repainted if associated live ranges are changed.
https://bugs.webkit.org/show_bug.cgi?id=262168
Summary
Highlights are not repainted if associated live ranges are changed.
Megan Gardner
Reported
2023-09-27 01:02:04 PDT
Highlights are not repainted if associated live ranges are changed.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-09-27 01:04:03 PDT
<
rdar://problem/116108148
>
Megan Gardner
Comment 2
2023-09-27 01:12:46 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18266
EWS
Comment 3
2023-09-29 11:15:08 PDT
Committed
268660@main
(306860296d33): <
https://commits.webkit.org/268660@main
> Reviewed commits have been landed. Closing PR #18266 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug