Cherry-pick 306860296d33. rdar://116696028

Highlights are not repainted if associated live ranges are changed.
    https://bugs.webkit.org/show_bug.cgi?id=262168
    rdar://116108148

    Reviewed by Wenson Hsieh.

    When a range is changed, we need to repaint the previous and the new range.
    Fortunately, we already had a mechanism to get Positions from the ranges
    so that we have the information we need at paint time. We can use these
    stale positions to know what the range was before updating, and repaint the old
    range, as well as the new range.
    Also a rename for more clarity around setting flags for highlights in Range.

    * LayoutTests/fast/repaint/highlight-paint-after-range-change-expected.txt: Added.
    * LayoutTests/fast/repaint/highlight-paint-after-range-change.html: Added.
    * Source/WebCore/Modules/highlight/Highlight.h:
    (WebCore::HighlightRange::HighlightRange):
    * Source/WebCore/dom/Document.cpp:
    (WebCore::Document::collectHighlightRangesFromRegister):
    (WebCore::repaintRange):
    (WebCore::Document::updateHighlightPositions):
    (WebCore::Document::collectRangeDataFromRegister): Deleted.
    * Source/WebCore/dom/Document.h:
    * Source/WebCore/dom/Range.cpp:
    (WebCore::Range::updateAssociatedHighlight):
    (WebCore::Range::setStart):
    (WebCore::Range::setEnd):
    (WebCore::Range::nodeChildrenChanged):
    (WebCore::Range::nodeChildrenWillBeRemoved):
    (WebCore::Range::nodeWillBeRemoved):
    (WebCore::Range::textInserted):
    (WebCore::Range::textRemoved):
    (WebCore::Range::textNodesMerged):
    (WebCore::Range::textNodeSplit):
    * Source/WebCore/dom/Range.h:

    Canonical link: https://commits.webkit.org/268660@main

Canonical link: https://commits.webkit.org/267815.276@safari-7617-branch